--- a/src/main/resources/templates/users/profile.html
+++ b/src/main/resources/templates/users/profile.html
@@ -28,7 +28,9 @@
                         <a class="nav-link" href="/posts/new">글쓰기</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/logout">로그아웃</a>
+                        <form th:action="@{/logout}" method="post" style="display: inline;">
+                            <button type="submit" class="nav-link btn btn-link p-0" style="text-decoration: none;">로그아웃</button>
+                        </form>
                     </li>
                 </ul>
             </div>
