마크다운 적용 문제 수정
1. 마크다운이 렌더링되지 않고 그대로 텍스트로 출력되는 문제
2. 마크다운 체크박스 상태와 관계없이 항상 마크다운이 파싱되는 문제
3. 마크다운을 적용하지 않았을 때 일반 텍스트의 줄바꿈이 HTML에서 표시되지 않는 문제

--- a/src/main/resources/templates/posts/detail.html
+++ b/src/main/resources/templates/posts/detail.html
@@ -76,7 +76,7 @@
 
                     <!-- 게시글 내용 -->
                     <div class="card-body">
-                        <div th:utext="${#strings.replace(#strings.escapeXml(post.content), '\n', '&lt;br/&gt;')}"
+                        <div th:utext="${htmlContent}"
                              class="post-content" style="min-height: 200px; line-height: 1.6;"></div>
                     </div>
 
