--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>로그인 - 7일 게시판</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/base}" th:with="pageTitle='로그인'">
+
+<th:block layout:fragment="head">
+    <!-- 로그인 페이지 전용 CSS -->
+</th:block>
+
+<div layout:fragment="content">
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-6">
@@ -62,7 +62,10 @@
             </div>
         </div>
     </div>
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+<th:block layout:fragment="scripts">
+    <!-- 로그인 페이지 전용 JavaScript -->
+</th:block>
+
 </html>
