--- a/src/main/resources/templates/posts/detail.html
+++ b/src/main/resources/templates/posts/detail.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/base}" th:with="pageTitle=${post.title}">
+
+<th:block layout:fragment="head">
     <meta name="_csrf" th:content="${_csrf.token}"/>
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
-    <title th:text="${post.title} + ' - 7일 게시판'">게시글 상세 - 7일 게시판</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-</head>
-<body>
+</th:block>
+
+<div layout:fragment="content">
     <div class="container mt-4">
         <div class="row">
             <div class="col-12">
@@ -202,13 +200,12 @@
             </div>
         </div>
     </div>
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<th:block layout:fragment="scripts">
     <script th:inline="javascript">
         // 게시글 ID를 JavaScript 변수로 전달
         const postId = /*[[${post.id}]]*/ 1;
-
-        // CSRF 토큰을 JavaScript 변수로 전달
         const csrfToken = /*[[${_csrf.token}]]*/ 'CSRF_TOKEN';
         const csrfHeader = /*[[${_csrf.headerName}]]*/ 'X-CSRF-TOKEN';
 
@@ -582,5 +579,6 @@
             buttonGroup.style.display = 'flex';
         }
     </script>
-</body>
+</th:block>
+
 </html>
