--- a/src/main/resources/templates/posts/list.html
+++ b/src/main/resources/templates/posts/list.html
@@ -1,37 +1,12 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>게시글 목록 - 7일 게시판</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <!-- 네비게이션 바 추가 -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
-            <a class="navbar-brand" th:href="@{/posts}">7일 게시판</a>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/base}" th:with="pageTitle='게시글 목록'">
 
-            <div class="navbar-nav ms-auto">
-                <!-- 로그인한 사용자 -->
-                <div sec:authorize="isAuthenticated()" class="navbar-nav">
-                    <span class="navbar-text me-3">
-                        안녕하세요, <span sec:authentication="name"></span>님!
-                    </span>
-                    <form th:action="@{/logout}" method="post" style="display: inline;">
-                        <button type="submit" class="nav-link btn btn-link p-0" style="text-decoration: none;">로그아웃</button>
-                    </form>
-                </div>
+<th:block layout:fragment="head">
+    <!-- 페이지별 추가 CSS가 필요한 경우 여기에 -->
+</th:block>
 
-                <!-- 로그인하지 않은 사용자 -->
-                <div sec:authorize="!isAuthenticated()" class="navbar-nav">
-                    <a class="nav-link" th:href="@{/login}">로그인</a>
-                    <a class="nav-link" th:href="@{/register}">회원가입</a>
-                </div>
-            </div>
-        </div>
-    </nav>
-
+<div layout:fragment="content">
     <div class="container mt-4">
         <div class="row">
             <div class="col-12">
@@ -145,7 +120,10 @@
             </div>
         </div>
     </div>
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+<th:block layout:fragment="scripts">
+    <!-- 페이지별 추가 JavaScript가 필요한 경우 여기에 -->
+</th:block>
+
 </html>
